tests/build/cases/widget/missing_semi.stderr
error: expected `;`
  --> cases/widget/missing_semi.rs:11:9
   |
11 |         margin = 10
   |         ^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `cursor`
  --> cases/widget/missing_semi.rs:17:9
   |
17 |         cursor = zero_ui::core::window::CursorIcon::Hand;
   |         ^^^^^^ not found in `cursor`
   |
help: consider importing one of these items
   |
1  | use crate::test_widget::__properties__::enabled::property;
   |
1  | use crate::test_widget::__properties__::id::property;
   |
1  | use crate::test_widget::__properties__::visibility::property;
   |
1  | use zero_ui::prelude::align::property;
   |
     and 412 other candidates
help: if you import `property`, refer to it directly
   |
17 -         cursor = zero_ui::core::window::CursorIcon::Hand;
17 +         cursor = zero_ui::core::window::CursorIcon::Hand;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `margin`
  --> cases/widget/missing_semi.rs:18:9
   |
18 |         margin = 5;
   |         ^^^^^^ not found in `margin`
   |
help: consider importing one of these items
   |
1  | use crate::test_widget::__properties__::enabled::property;
   |
1  | use crate::test_widget::__properties__::id::property;
   |
1  | use crate::test_widget::__properties__::visibility::property;
   |
1  | use zero_ui::prelude::align::property;
   |
     and 412 other candidates
help: if you import `property`, refer to it directly
   |
18 -         margin = 5;
18 +         margin = 5;
   |

warning: unused import: `cursor`
 --> cases/widget/missing_semi.rs:5:31
  |
5 |     use zero_ui::properties::{cursor, margin};
  |                               ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/missing_semi.rs:4:1
  |
4 | pub mod test_widget {
  | ^^^^^^^^^^^^^^^^^^^
